fixed bug where image was not centered on mobile devices

--- a/culinary_compass/culinarycompass/static/main.css
+++ b/culinary_compass/culinarycompass/static/main.css
@@ -93,8 +93,9 @@ ul {
 
 /* Set dimensions for home page logo */
 .logo-img {
-    height: 20em;
-    object-fit:cover;
+    height: 40vh;
+    max-width: 40vw;
+    object-fit: cover;
 }
 
 /* Set dimensions and border radius for home page tutorial images */
